Fix jumping header. RG-2281 related

--- a/.storybook/custom-header/header-styles.css
+++ b/.storybook/custom-header/header-styles.css
@@ -1,3 +1,7 @@
+:global(body) {
+  margin: 0;
+}
+
 /**
   Hackish handle Strotybooks fixed position
  */
